refactor(messaging): remove DataHubUpgradeHistory_v1
ZDU job ordering already gates blocking system-update, so the Kafka/pgQueue startup marker is redundant. Reserve internal schema id 8 so leftover payloads cannot collide with a new event type.