@@ -1,17 +1,12 @@
 package com.linkedin.metadata.kafka.boot;
 
-import com.google.common.collect.ImmutableList;
 import com.linkedin.gms.factory.config.ConfigurationProvider;
 import com.linkedin.metadata.boot.BootstrapManager;
-import com.linkedin.metadata.boot.BootstrapStep;
-import com.linkedin.metadata.boot.dependencies.BootstrapDependency;
-import com.linkedin.metadata.boot.steps.WaitForSystemUpdateStep;
 import com.linkedin.metadata.config.BootstrapConfigurationSupport;
 import com.linkedin.metadata.kafka.config.MetadataChangeLogProcessorCondition;
 import java.util.List;
 import javax.annotation.Nonnull;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.context.annotation.Configuration;
@@ -21,10 +16,6 @@ import org.springframework.context.annotation.Scope;
 @Conditional(MetadataChangeLogProcessorCondition.class)
 public class MCLBootstrapManagerFactory {
 
-  @Autowired
-  @Qualifier("dataHubUpgradeKafkaListener")
-  private BootstrapDependency _dataHubUpgradeKafkaListener;
-
   @Autowired private ConfigurationProvider _configurationProvider;
 
   @Bean(name = "mclBootstrapManager")
@@ -33,11 +24,6 @@ public class MCLBootstrapManagerFactory {
   protected BootstrapManager createInstance() {
     final int asyncWorkerThreads =
         BootstrapConfigurationSupport.requireAsyncWorkerThreads(_configurationProvider);
-    final WaitForSystemUpdateStep waitForSystemUpdateStep =
-        new WaitForSystemUpdateStep(_dataHubUpgradeKafkaListener, _configurationProvider);
-
-    final List<BootstrapStep> finalSteps = ImmutableList.of(waitForSystemUpdateStep);
-
-    return new BootstrapManager(finalSteps, asyncWorkerThreads);
+    return new BootstrapManager(List.of(), asyncWorkerThreads);
   }
 }
